--- a/WindowsApp/ProjectKService/ProjectKService/ProjectKService.csproj
+++ b/WindowsApp/ProjectKService/ProjectKService/ProjectKService.csproj
@@ -34,6 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CardScanHandler.cs" />
+    <Compile Include="CommandHandler.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="SerialPortHandler.cs" />
     <Compile Include="ServiceInstaller.cs">
