--- a/WindowsApp/ProjectKService/ProjectKService/App.config
+++ b/WindowsApp/ProjectKService/ProjectKService/App.config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="DatabaseConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=klick_vending_machine;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="klick_vending_machineEntities" connectionString="metadata=res://*/Model.ProjectKServiceModel.csdl|res://*/Model.ProjectKServiceModel.ssdl|res://*/Model.ProjectKServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=klick_vending_machine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="keyscandb" connectionString="server=keyscan_dbserver;database=keyscan7;uid=keyscan_user;password=keyscan_pwd" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
