--- a/WindowsApp/ProjectKService/ProjectKService/App.config
+++ b/WindowsApp/ProjectKService/ProjectKService/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=klick_vending_machine;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="klick_vending_machineEntities" connectionString="metadata=res://*/Model.ProjectKServiceModel.csdl|res://*/Model.ProjectKServiceModel.ssdl|res://*/Model.ProjectKServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=klick_vending_machine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabaseConnection" connectionString="Data Source=localhost\SQLEXPRESS; Initial Catalog=klick_vending_machine; User Id=sa; Password=ikrzikrz;" providerName="System.Data.SqlClient" />
+    <add name="klick_vending_machineEntities" connectionString="metadata=res://*/Model.ProjectKServiceModel.csdl|res://*/Model.ProjectKServiceModel.ssdl|res://*/Model.ProjectKServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=klick_vending_machine;User Id=sa; Password=ikrzikrz;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
